k8s/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-go-app
  labels:
    app: my-go-app
spec:
  replicas: 3  # Total replicas (stable + canary)
  selector:
    matchLabels:
      app: my-go-app
  strategy:
    canary:
      steps:
        - setWeight: 10  # 10% para el canary
        - pause: {}  # Pausa para verificar el estado
        - setWeight: 50  # Si el canary es correcto, sube al 50%
        - pause: {}  # Pausa para verificar el estado
        - setWeight: 100  # Finaliza el rollout con 100%
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: my-go-app
    spec:
      containers:
        - name: my-go-app
          image: europe-docker.pkg.dev/my-holded-test-project/my-go-app/my-go-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: my-go-app
spec:
  selector:
    app: my-go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  # Eliminamos LoadBalancer, ya que Istio manejará el enrutamiento
  type: ClusterIP

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-go-app-gateway
spec:
  selector:
    istio: ingressgateway  # Asegura que el Gateway de Istio se use
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "my-go-app.example.com"  # Cambia esto a tu dominio real
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "my-go-app.example.com"  # Cambia esto a tu dominio real
    tls:
      mode: SIMPLE
      credentialName: my-go-app-tls  # El nombre del secreto TLS
      privateKey: sds
      serverCertificate: sds

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-go-app-virtualservice
spec:
  hosts:
  - "my-go-app.example.com"
  gateways:
  - my-go-app-gateway  # Se asocia con el Gateway de Istio
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-go-app
        port:
          number: 8080
